# Pacr

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  _token_utils.py  analyze.py  import_races.sh  justfile  plan.py  pot10.py  pyproject.toml  strava_auth.py  strava_sync.py  telegram_bot.py
.github/workflows/: ci.yml
config/: AGENTS.md  SOUL.md  athlete-profile.md  openclaw.json.example
docker/: Dockerfile.skills  docker-compose.yml
src/: _token_utils.py  pot10.py  strava_auth.py  strava_sync.py
src/coach_utils/: adherence.py  analyze.py  plan.py  readiness.py  records.py  training_load.py  wellness.py
src/memory/: store.py
src/strava_utils/: pot10.py  strava_auth.py  strava_sync.py  strava_webhook.py
src/tgbot/: bot.py  claude_chat.py  context.py  debrief.py  formatters.py  handlers.py  km_query.py  telegram_send.py
tests/: conftest.py  test_adherence.py  test_analyze.py  test_debrief.py  test_km_query.py  test_memory_store.py  test_multisport.py  test_pot10.py  test_readiness.py  test_records.py  test_splits.py  test_strava_sync.py  test_telegram_bot.py  test_training_load.py  test_wellness.py
